# ai_kms

./: .dockerignore  .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONSTRAINTS.md  CONTEXT.md  DEBTS_CONSTRAINTS.md  Dockerfile  OPEN_QUESTIONS.md  README.md  STATE.md  TECH_DEBT.md  behavior_inventory.yaml  litestream.yml  main.py  pyproject.toml  reasonix.toml  repomix.config.json  repomix.reference.config.json  test.py  whatcouldbebetter
.claude/: launch.json  settings.json  settings.local.json
.claude/commands/: capture_discussion_v2.md  implement.md  implement_v2.md  implement_v3.md  plan.md  plan_v3.md  plan_v4.md  plan_v5.md  research.md  research_v2.md  research_v3.md  update-state.md
.claude/outdated_cmd/: capture_discussion.md  implement.md  plan.md  plan_v2.md  plan_v4.md  plan_v5.md  research_v2.md
.codegraph/: daemon.pid
.obsidian/: workspace.json
.reasonix/: settings.json
_essential vibe setup/new-switch/: claude-switch 2
_essential vibe setup/switch claude account/: claude-switch.sh  guide.md
_essential vibe setup/switch-provider/: guide.md  switch-provider.sh
cli/: main.py
config/: config.yaml  dimensions.yaml  tags.yaml  threshold.yaml  thresholds.yaml
core/: audit.py  confidence.py  config.py  exceptions.py  logging_setup.py  pipeline.py  rename_gate.py  result.py  tags.py
docs/: gotchas_archive.md  mindspace.md  obsidian_vault_layout.md  onboarding.md  phase0_guide.md  roadmap.md
handlers/: __init__.py  base.py  docx_handler.py  markdown_handler.py  pdf_handler.py  url_fetcher.py  xlsx_handler.py
llm/: claude_provider.py  ollama_provider.py  openai_provider.py  prompt_loader.py  provider.py
packaging/: build_dmg.sh  daemon.spec  installer.iss
pipelines/: capture.py  reconcile.py
plans/: storage_level.md
prompts/: extract_metadata.yaml  summarize.yaml  test.yaml
research/: storage_level.md
scripts/: seed_mock_data.py  start.sh
seed_output/: seed_mock_data.json  seed_mock_data.sql
storage/: audit_log.py  db.py  documents.py  schema.sql
test claude cli/: finance.docx
tests/: conftest.py
vault/: frontmatter.py  indexer.py  paths.py  reader.py  watcher.py  writer.py
(+511 files in other folders)
