[project]
name = "ai-kms"
version = "0.1.0"
description = "Building knowledge system with AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "python-frontmatter",
    "pydantic>=2.0",
    "structlog",
    "jinja2",
    "pytest",
    "pytest-asyncio",
    "requests>=2.33.1",
    "anthropic>=0.97.0",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*", "logs*", "venv*", ".venv*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "smoke: tests that require real config files and a live vault on disk",
]
