[project]
name = "ai-kms"
version = "0.1.0"
description = "Building knowledge system with AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "python-frontmatter",
    "pydantic>=2.0",
    "structlog",
    "jinja2",
    "pytest",
    "pytest-asyncio",
    "requests>=2.33.1",
    "anthropic>=0.97.0",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "openai>=1.0",
    "mypy>=2.1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "youtube-transcript-api>=0.6",
    "click>=8.0",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "extract-msg>=0.28",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
kms = "cli.main:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "data*", "logs*", "venv*", ".venv*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "fpdf2>=2.7",
    "types-requests>=2.32",
    "types-openpyxl>=3.1",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
markers = [
    "smoke: tests that require real config files and a live vault on disk",
    "integration: tests that call a real external API and require a live key",
]
